<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity"
    android:id="@+id/ll_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/tb_attraction"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:id="@+id/ll_login_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/half_great_dimen"
        android:layout_marginRight="@dimen/half_great_dimen">

        <TextView
            android:id="@+id/lbl_login_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ff_dimen"
            android:text="@string/loginlbl"
            android:paddingTop="@dimen/big_dimen"
            android:paddingLeft="@dimen/big_dimen"
            android:theme="@style/formHeader"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/big_dimen">

            <include
                android:id="@+id/txt_attraction_user"
                layout="@layout/edittext_input"/>

            <include
                android:id="@+id/txt_attraction_password"
                layout="@layout/edittext_input"/>

            <RelativeLayout
                android:id="@+id/rl_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/cb_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_dimen"
                    android:checked="false"
                    android:text="@string/showPassword"/>

                <TextView
                    android:id="@+id/lbl_login_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/basic_dimen"
                    android:text=""/>

                <TextView
                    android:id="@+id/lbl_login_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cb_login"
                    android:layout_marginLeft="@dimen/basic_dimen"
                    android:textSize="@dimen/half_great_dimen"
                    android:text="@string/register"
                    android:textColor="@drawable/text_link"/>

                <Button
                    android:id="@+id/btn_login_validate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@id/lbl_login_count"
                    android:text="@string/btnEnter"
                    android:textColor="@color/colorGreen" />

                <Spinner
                    android:id="@+id/spinner_login"
                    android:layout_marginTop="@dimen/small_dimen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_login_validate"
                    android:layout_alignParentRight="true"/>

                <ProgressBar
                    android:id="@+id/progress_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/spinner_login"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>